--- a/Manual/openad.tex
+++ b/Manual/openad.tex
@@ -132,6 +132,11 @@
 \verbatiminput{versionInfoOpenAD.txt}
 \end{minipage}
 }
+\vspace{4cm}
+\\
+\includegraphics[width=.2\textwidth]{savetree.jpg}\\[1ex]
+\Large This is hyperref'ed PDF and should be viewed in a \\[.5ex]
+\Large PDF reader instead of being printed!
 }
 \date{ }
 
